Refactoring ClientServerTest